--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -71,11 +71,14 @@ gtest_main.a : gtest-all.o gtest_main.o
 GildedRose.o : $(USER_DIR)/GildedRose.cc
 	$(CXX) -c $^
 
+BrieItem.o : $(USER_DIR)/BrieItem.cc
+	$(CXX) -c $^
+
 GildedRoseUnitTests.o : $(USER_DIR)/GildedRoseUnitTests.cc \
   $(GTEST_HEADERS)
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $(USER_DIR)/GildedRoseUnitTests.cc
 
-GildedRose : GildedRoseUnitTests.o GildedRose.o gtest.a gtest_main.a
+GildedRose : GildedRoseUnitTests.o GildedRose.o BrieItem.o gtest.a gtest_main.a
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -pthread $^ -o $@
 
 GildedRoseTextTests.o : $(USER_DIR)/GildedRoseTextTests.cc
